--- a/you-say!/you-say!/Storyboards/Principal.storyboard
+++ b/you-say!/you-say!/Storyboards/Principal.storyboard
@@ -21,7 +21,8 @@
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ENi-0j-u5d">
                                 <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                                 <color key="backgroundColor" red="0.0" green="0.47450980390000003" blue="0.41960784309999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                <color key="tintColor" red="0.0" green="0.29803921570000003" blue="0.25098039220000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="barTintColor" red="0.55294117649999996" green="0.43137254899999999" blue="0.38823529410000002" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
                                 <textAttributes key="titleTextAttributes">
                                     <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
                                     <color key="textColor" red="0.0" green="0.29803921570000003" blue="0.25098039220000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -36,25 +37,29 @@
                                     </navigationItem>
                                 </items>
                             </navigationBar>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WoO-70-3xw">
-                                <rect key="frame" x="0.0" y="88" width="414" height="40"/>
-                                <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Elige tus categorías favoritas" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KJy-sY-IXv">
-                                        <rect key="frame" x="89" y="10" width="237" height="21"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
-                                        <nil key="textColor"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                </subviews>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            </view>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsMultipleSelection="YES" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Fhz-7Z-s7j">
-                                <rect key="frame" x="0.0" y="126" width="414" height="736"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
+                                <color key="backgroundColor" red="0.8822752833366394" green="0.88629978895187378" blue="0.88235598802566528" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="separatorColor" red="0.88227528330000005" green="0.88629978899999995" blue="0.88235598800000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <inset key="separatorInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                <color key="sectionIndexBackgroundColor" red="0.91372549020000005" green="0.92156862750000001" blue="0.61960784310000006" alpha="1" colorSpace="calibratedRGB"/>
+                                <view key="tableHeaderView" contentMode="scaleToFill" id="WoO-70-3xw">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="40"/>
+                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Elige tus categorías favoritas" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KJy-sY-IXv">
+                                            <rect key="frame" x="89" y="10" width="239" height="22"/>
+                                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="18"/>
+                                            <color key="textColor" red="0.24698823689999999" green="0.31893250350000002" blue="0.71358287330000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                    </subviews>
+                                    <color key="backgroundColor" red="0.88227528330000005" green="0.88629978899999995" blue="0.88235598800000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                </view>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="none" indentationWidth="10" reuseIdentifier="filterCell" rowHeight="47" id="GzW-pY-VCE" customClass="FilterTableViewCell" customModule="you_say_" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="28" width="414" height="47"/>
+                                        <rect key="frame" x="0.0" y="68" width="414" height="47"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="GzW-pY-VCE" id="6WX-df-kxd">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="46.5"/>
@@ -63,7 +68,6 @@
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CqQ-ry-jbG">
                                                     <rect key="frame" x="34" y="13" width="42" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -73,6 +77,7 @@
                                                 <constraint firstItem="CqQ-ry-jbG" firstAttribute="top" secondItem="6WX-df-kxd" secondAttribute="top" constant="13" id="dAh-hu-neS"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" red="0.24698823689999999" green="0.31893250350000002" blue="0.71358287330000003" alpha="0.049295774647887321" colorSpace="custom" customColorSpace="displayP3"/>
                                         <connections>
                                             <outlet property="categoryDescription" destination="CqQ-ry-jbG" id="PO4-Ag-k6t"/>
                                         </connections>
@@ -83,20 +88,32 @@
                                     <outlet property="delegate" destination="PUw-Cb-BTk" id="hMW-9h-1s4"/>
                                 </connections>
                             </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zWj-ro-zUH">
+                                <rect key="frame" x="0.0" y="862" width="414" height="34"/>
+                                <color key="backgroundColor" red="0.88227528330000005" green="0.88629978899999995" blue="0.88235598800000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Iws-TC-Zbk">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                <color key="backgroundColor" red="0.88294178249999999" green="0.85104399919999996" blue="0.84313982730000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstAttribute="bottom" secondItem="zWj-ro-zUH" secondAttribute="bottom" id="2cs-J0-e9c"/>
                             <constraint firstItem="ENi-0j-u5d" firstAttribute="leading" secondItem="6Vu-qC-fIy" secondAttribute="leading" id="3it-kI-oj1"/>
-                            <constraint firstItem="WoO-70-3xw" firstAttribute="trailing" secondItem="6Vu-qC-fIy" secondAttribute="trailing" id="HHr-0i-y0U"/>
+                            <constraint firstAttribute="trailing" secondItem="zWj-ro-zUH" secondAttribute="trailing" id="4y8-bM-A1c"/>
+                            <constraint firstItem="Iws-TC-Zbk" firstAttribute="top" secondItem="Sjd-3W-517" secondAttribute="top" id="DqM-J8-h9r"/>
+                            <constraint firstItem="Iws-TC-Zbk" firstAttribute="leading" secondItem="Sjd-3W-517" secondAttribute="leading" id="E1C-2g-sNH"/>
                             <constraint firstItem="ENi-0j-u5d" firstAttribute="trailing" secondItem="6Vu-qC-fIy" secondAttribute="trailing" id="UOw-7j-bN3"/>
-                            <constraint firstItem="Fhz-7Z-s7j" firstAttribute="top" secondItem="WoO-70-3xw" secondAttribute="bottom" constant="-2" id="aao-Cf-zTc"/>
-                            <constraint firstItem="WoO-70-3xw" firstAttribute="leading" secondItem="6Vu-qC-fIy" secondAttribute="leading" id="bah-M7-y6b"/>
+                            <constraint firstAttribute="trailing" secondItem="Iws-TC-Zbk" secondAttribute="trailing" id="fJa-Xe-KD1"/>
                             <constraint firstItem="Fhz-7Z-s7j" firstAttribute="trailing" secondItem="6Vu-qC-fIy" secondAttribute="trailing" id="g3B-IR-HIg"/>
                             <constraint firstItem="ENi-0j-u5d" firstAttribute="top" secondItem="6Vu-qC-fIy" secondAttribute="top" id="igG-8Z-1mW"/>
-                            <constraint firstItem="WoO-70-3xw" firstAttribute="top" secondItem="ENi-0j-u5d" secondAttribute="bottom" id="jGQ-xa-i1i"/>
-                            <constraint firstItem="Fhz-7Z-s7j" firstAttribute="top" secondItem="ENi-0j-u5d" secondAttribute="bottom" constant="38" id="orp-2s-Ezt"/>
+                            <constraint firstItem="zWj-ro-zUH" firstAttribute="leading" secondItem="Sjd-3W-517" secondAttribute="leading" id="ivf-Ly-WKp"/>
+                            <constraint firstItem="Fhz-7Z-s7j" firstAttribute="top" secondItem="ENi-0j-u5d" secondAttribute="bottom" id="orp-2s-Ezt"/>
                             <constraint firstItem="Fhz-7Z-s7j" firstAttribute="leading" secondItem="6Vu-qC-fIy" secondAttribute="leading" id="pPd-Jh-hRx"/>
                             <constraint firstItem="Fhz-7Z-s7j" firstAttribute="bottom" secondItem="6Vu-qC-fIy" secondAttribute="bottom" id="qGC-A0-HMG"/>
+                            <constraint firstItem="zWj-ro-zUH" firstAttribute="top" secondItem="Fhz-7Z-s7j" secondAttribute="bottom" id="tZb-Nf-q3P"/>
+                            <constraint firstItem="ENi-0j-u5d" firstAttribute="top" secondItem="Iws-TC-Zbk" secondAttribute="bottom" id="u2q-Yr-bHi"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Vu-qC-fIy"/>
                     </view>
@@ -773,6 +790,6 @@
         <image name="report" width="24" height="24"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="f7j-ge-b0e"/>
+        <segue reference="CGk-s2-06D"/>
     </inferredMetricsTieBreakers>
 </document>
