Design for CategoriesVC

--- a/you-say!/you-say!/Storyboards/NewQuestion.storyboard
+++ b/you-say!/you-say!/Storyboards/NewQuestion.storyboard
@@ -232,7 +232,8 @@
                             <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Jzf-qc-es0">
                                 <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                                 <color key="backgroundColor" red="0.0" green="0.47450980390000003" blue="0.41960784309999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                <color key="tintColor" red="0.0" green="0.29803921570000003" blue="0.25098039220000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="barTintColor" red="0.55294117649999996" green="0.43137254899999999" blue="0.38823529410000002" alpha="0.84705882349999995" colorSpace="calibratedRGB"/>
                                 <textAttributes key="titleTextAttributes">
                                     <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="17"/>
                                     <color key="textColor" red="0.0" green="0.29803921570000003" blue="0.25098039220000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
@@ -249,11 +250,13 @@
                             </navigationBar>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="2SS-0f-Ts3">
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" red="0.88227528330000005" green="0.88629978899999995" blue="0.88235598800000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="separatorColor" red="0.88227528330000005" green="0.88629978899999995" blue="0.88235598800000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="sectionIndexBackgroundColor" red="0.88227528330000005" green="0.88629978899999995" blue="0.88235598800000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <view key="tableFooterView" contentMode="scaleToFill" id="DED-HK-s3N">
                                     <rect key="frame" x="0.0" y="76" width="414" height="44"/>
                                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="backgroundColor" red="0.88227528330000005" green="0.88629978899999995" blue="0.88235598800000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </view>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="optionCell" rowHeight="48" id="YHy-ME-zuK" customClass="OptionTableViewCell" customModule="you_say_" customModuleProvider="target">
@@ -276,6 +279,7 @@
                                                 <constraint firstAttribute="bottom" secondItem="fhM-IA-IXj" secondAttribute="bottom" constant="13.5" id="tOl-LL-HdX"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <color key="backgroundColor" white="0.65972297963961746" alpha="0.049295774647887321" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <connections>
                                             <outlet property="categoryDescription" destination="fhM-IA-IXj" id="4vd-0n-Rox"/>
                                         </connections>
@@ -286,16 +290,32 @@
                                     <outlet property="delegate" destination="JKv-ex-xrd" id="cU1-cM-o5R"/>
                                 </connections>
                             </tableView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5rA-aU-N7l">
+                                <rect key="frame" x="0.0" y="862" width="414" height="34"/>
+                                <color key="backgroundColor" red="0.88227528330000005" green="0.88629978899999995" blue="0.88235598800000004" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0bW-X2-qfb">
+                                <rect key="frame" x="0.0" y="0.0" width="414" height="44"/>
+                                <color key="backgroundColor" red="0.88294178249999999" green="0.85104399919999996" blue="0.84313982730000003" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
+                            <constraint firstAttribute="trailing" secondItem="5rA-aU-N7l" secondAttribute="trailing" id="1O3-jC-pKj"/>
+                            <constraint firstItem="0bW-X2-qfb" firstAttribute="top" secondItem="Kpx-LW-H3Z" secondAttribute="top" id="1cE-rA-bOS"/>
+                            <constraint firstAttribute="bottom" secondItem="5rA-aU-N7l" secondAttribute="bottom" id="8FW-ND-2NH"/>
                             <constraint firstItem="2SS-0f-Ts3" firstAttribute="leading" secondItem="zoi-ZV-Kgr" secondAttribute="leading" id="9fL-cL-JwZ"/>
                             <constraint firstItem="2SS-0f-Ts3" firstAttribute="bottom" secondItem="zoi-ZV-Kgr" secondAttribute="bottom" id="DGh-u0-0zr"/>
+                            <constraint firstItem="0bW-X2-qfb" firstAttribute="leading" secondItem="Kpx-LW-H3Z" secondAttribute="leading" id="Pc5-Zk-yhk"/>
+                            <constraint firstItem="5rA-aU-N7l" firstAttribute="leading" secondItem="Kpx-LW-H3Z" secondAttribute="leading" id="Qgw-HV-oKd"/>
                             <constraint firstItem="Jzf-qc-es0" firstAttribute="top" secondItem="zoi-ZV-Kgr" secondAttribute="top" id="VIa-b5-c69"/>
                             <constraint firstItem="2SS-0f-Ts3" firstAttribute="top" secondItem="Jzf-qc-es0" secondAttribute="bottom" id="Vu3-Sp-4Ah"/>
                             <constraint firstItem="Jzf-qc-es0" firstAttribute="leading" secondItem="zoi-ZV-Kgr" secondAttribute="leading" id="XBY-Qn-dDN"/>
                             <constraint firstItem="Jzf-qc-es0" firstAttribute="trailing" secondItem="zoi-ZV-Kgr" secondAttribute="trailing" id="XYe-4s-MiB"/>
+                            <constraint firstItem="Jzf-qc-es0" firstAttribute="top" secondItem="0bW-X2-qfb" secondAttribute="bottom" id="ekt-Z4-lc5"/>
+                            <constraint firstAttribute="trailing" secondItem="0bW-X2-qfb" secondAttribute="trailing" id="nvV-nH-ewH"/>
                             <constraint firstItem="2SS-0f-Ts3" firstAttribute="trailing" secondItem="zoi-ZV-Kgr" secondAttribute="trailing" id="uah-Ma-AOD"/>
+                            <constraint firstItem="5rA-aU-N7l" firstAttribute="top" secondItem="2SS-0f-Ts3" secondAttribute="bottom" id="vPj-5H-xoV"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="zoi-ZV-Kgr"/>
                     </view>
